[package]
name = "omena-bundler"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish.workspace = true
description = "Standalone 0.x Omena CSS bundler planning surface"
repository = "https://github.com/omenien/omena-css"
readme = "README.md"

[package.metadata.omena]
role = "R2"

[lints]
workspace = true

[dependencies]
omena-cascade = { path = "../omena-cascade", version = "=0.2.1" }
omena-parser = { path = "../omena-parser", version = "=0.2.1" }
omena-transform-cst = { path = "../omena-transform-cst", version = "=0.2.1" }
omena-transform-passes = { path = "../omena-transform-passes", version = "=0.2.1" }
serde.workspace = true
