[package]
name = "omena-cascade-proof"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish.workspace = true
description = "Product-owned cascade proof contracts for Omena CSS"
repository = "https://github.com/omenien/omena-css"
readme = "README.md"

[package.metadata.omena]
role = "R1"

[lints]
workspace = true

[features]
default = []
smt-z3 = ["dep:omena-smt", "omena-smt/smt-z3"]

[dependencies]
blake3.workspace = true
omena-cascade = { path = "../omena-cascade", version = "=0.2.1" }
omena-evidence-graph = { path = "../omena-evidence-graph", version = "=0.2.1" }
omena-refinement-trait = { path = "../omena-refinement-trait", version = "=0.2.1" }
omena-smt = { path = "../omena-smt", version = "=0.2.1", optional = true }
serde.workspace = true
serde_json.workspace = true

[dev-dependencies]
