[package]
name = "omena-cascade"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true
description = "Cascade-formal substrate for Omena CSS"
repository = "https://github.com/yongsk0066/css-module-explainer"
readme = "README.md"

[lints]
workspace = true

[features]
default = []
bdd-attractor = []
frame-rule = []
grn = []
naldi-lumping = []
spin-glass = []

[dependencies]
serde.workspace = true
